--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  background-color: #dadad8;
+}
+
+#root {
+  background-color: #dadad8;
+}
+h1 {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1.2rem;
+  text-transform: capitalize;
+  letter-spacing: 0.8px;
+  font-weight: 700;
+}
+
+p {
+  font-size: 0.9rem;
+  text-transform: capitalize;
+  letter-spacing: 150%;
 }
